--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PhotoGalleryCLB",
+  "name": "condorgalery",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "fs-extra": "^7.0.1",
     "mongoose": "^5.5.3",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "timeago.js": "^4.0.0-beta.2",
-    "uuid": "^3.3.2"
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
